adicionando suporte à ordenacao e limite de registros, e paginacao
