# service/src/main/java/br/com/sw2u/realmeet/controller/AllocationController.java
@@ -46,8 +46,8 @@ public class AllocationController implements AllocationsApi {
     
     @Override
     public CompletableFuture<ResponseEntity<List<AllocationDTO>>> listAllocations(String employeeEmail, Long roomId, LocalDate startAt,
-            LocalDate endAt) {
-        return supplyAsync(() -> allocationService.listAllocations(employeeEmail, roomId, startAt, endAt), controllersExecutor).thenApply(
+            LocalDate endAt, String orderBy, Integer limit, Integer page) {
+        return supplyAsync(() -> allocationService.listAllocations(employeeEmail, roomId, startAt, endAt, orderBy, limit, page), controllersExecutor).thenApply(
                 ResponseEntityUtils::ok);
     }
 }
