# service/src/main/resources/api.yml
@@ -127,6 +127,9 @@ paths:
           schema:
             type: string
             format: date
+        - $ref: '#/components/parameters/orderBy'
+        - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/page'
       responses:
         200:
           description: 'OK'
@@ -291,3 +294,23 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/ResponseError'
+
+  parameters:
+    orderBy:
+      name: orderBy
+      in: query
+      description: 'Field to order by'
+      schema:
+        type: string
+    limit:
+      name: limit
+      in: query
+      description: 'Maximum number of returned records'
+      schema:
+        type: integer
+    page:
+      name: page
+      in: query
+      description: 'The page of records to fetch (0 index based)'
+      schema:
+        type: integer
